--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MonopolyExchange</title>
+  <title>Monopoly Exchange</title>
   <%= stylesheet_link_tag    "bootstrap.min", :media => "all" %>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "bootstrap.min" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
+	<div class="container">
+		<div class="pagination" align="center">
+		  <ul>
+		    <li><a href="/">Search stickers</a></li>
+		    <li><a href="#">Add sticker</a></li>
+		  </ul>
+		</div>
+		<%= yield %>
+	</div>
 
 </body>
 </html>
