--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -20,9 +20,15 @@
 </div>
 <div class="row">
 	<div class="pagination" align="center">
-			  <ul>
-			    <li><a href="/">Search stickers</a></li>
-			    <li><a href="#">Add sticker</a></li>
-			  </ul>
+	  <ul>
+	    <li><a href="/">Search stickers</a></li>
+	    <li><a href="#">Add sticker</a></li>
+	  </ul>
+	  <hr>
 	</div>
+</div>
+<div class="row" align="center">
+  <strong>Disclaimer: We are not affiliated with McDonald's in any way!</strong>
+  <p>Contact: <a href="https://twitter.com/adam0f" target="_blank">@adam0f</a> or 
+  	<a href="https://twitter.com/yvpetrov" target="_blank">@yvpetrov</a>
 </div>
