--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -7,7 +7,7 @@
 					<div class="btn-group" data-toggle="buttons-checkbox">
 					<% entries.each do |entry| %>
 				    <label class="checkbox">
-							<input type="checkbox"> <%= entry.name %>
+							<input type="checkbox" name="<%= entry.id %>"> <%= entry.name %>
 						</label>
 					<% end -%>
 				</div>
@@ -21,8 +21,8 @@
 <div class="row">
 	<div class="pagination" align="center">
 			  <ul>
-			    <li><a href="/">Search stickers</a></li>
-			    <li><a href="#">Add sticker</a></li>
+			    <li><a id="search_button" class="button" href="#">Search stickers</a></li>
+			    <li><a id="add_button" class="button" href="#">Add sticker</a></li>
 			  </ul>
 	</div>
 </div>
