--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -16,13 +16,13 @@
   </div>
 </div>
 <div class="row" align="center">
-  <input type="text" placeholder="Type your e-mail...">
+  <input id="email" type="text" placeholder="Type your e-mail...">
 </div>
 <div class="row">
   <div class="pagination" align="center">
     <ul>
       <li><a id="search_button" class="button" href="#">Search stickers</a></li>
-      <li><a id="add_button" class="button" href="#">Add sticker</a></li>
+      <li><a id="add_button" class="button" href="">Add sticker</a></li>
     </ul>
     <hr>
   </div>
