--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -16,7 +16,7 @@
   </div>
 </div>
 <div class="row" align="center">
-  <input type="text" placeholder="Type your e-mail...">
+  <input id="email" type="text" placeholder="Type your e-mail...">
 </div>
 <div class="row">
   <div class="pagination" align="center">
