changed email name and added js check for stickers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,13 +37,27 @@
 			    <button class="btn" data-dismiss="modal" aria-hidden="true">Got it!</button>
 			  </div>
 			</div>
-			<div id="success" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="successLabel" aria-hidden="true">
+			<div id="success_search" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="successLabel" aria-hidden="true">
 			  <div class="modal-header">
 			    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 			    <h3 id="myModalLabel">Success!</h3>
 			  </div>
 			  <div class="modal-body">
-			  	<p>Thank you! You should receive a confirmation email shortly.</p>
+			  	<p>Thank you! We will now send a notification link to everyone who has listed the stickers you have searched for. Make sure you come by and search for your stickers often enough to ensure that the owners of all newly added stickers are notified.</p>
+			    <strong>Remember:</strong> The more people know about this website, the greater
+			  	the chance is for you to find the stickers you need, so spread the word!</p>
+			  </div>
+			  <div class="modal-footer">
+			    <button class="btnSuccess" data-dismiss="modal" aria-hidden="true">Ok, thanks!</button>
+			  </div>
+			</div>
+			<div id="success_add" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="successLabel" aria-hidden="true">
+			  <div class="modal-header">
+			    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			    <h3 id="myModalLabel">Success!</h3>
+			  </div>
+			  <div class="modal-body">
+			  	<p>Thank you for adding your stickers! You should receive a confirmation email shortly. Once someone searches for the stickers you have added, you will receive a notification email with their contact information.</p>
 			    <strong>Remember:</strong> The more people know about this website, the greater
 			  	the chance is for you to find the stickers you need, so spread the word!</p>
 			  </div>
