--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -13,6 +13,7 @@
         <% end %>
       </ul>
     </p>
+    <p>If anyone searches for those stickers, we will send you a notification email!</p>
     <p>Thanks for joining and have a great day!</p>
   </body>
 </html>
