--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -28,7 +28,31 @@
   </div>
 </div>
 <div class="row" align="center">
+  <script type="text/javascript"><!--
+    google_ad_client = "ca-pub-7316264510359110";
+    /* monopoly */
+    google_ad_slot = "7010586809";
+    google_ad_width = 970;
+    google_ad_height = 90;
+    //-->
+  </script>
+  <script type="text/javascript"
+    src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
   <strong>Disclaimer: We are not affiliated with McDonald's in any way!</strong>
   <p>Contact: <a href="https://twitter.com/adam0f" target="_blank">@adam0f</a> or 
     <a href="https://twitter.com/yvpetrov" target="_blank">@yvpetrov</a>
 </div>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-40385735-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
