--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -7,7 +7,7 @@
           <div class="btn-group" data-toggle="buttons-checkbox">
           <% entries.each do |entry| %>
             <label class="checkbox">
-              <input type="checkbox" name="<%= entry.id %>"> <%= entry.name %>
+              <input type="checkbox" name="<%= entry.id %>"> <%= "#{entry.name} (#{entry.cards.count})" %>
             </label>
           <% end -%>
         </div>
