--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -14,6 +14,20 @@
       </div>
     <% end -%>
   </div>
+  <div class="span1">
+
+    <!-- AddThis Button BEGIN -->
+    <div class="addthis_toolbox addthis_floating_style addthis_counter_style" style="right:50px;top:50px;">
+    <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
+    <a class="addthis_button_tweet" tw:count="vertical"></a>
+    <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
+    <a class="addthis_counter"></a>
+    </div>
+    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5178062f111a57c7"></script>
+    <!-- AddThis Button END -->
+
+  </div>
 </div>
 <div class="row" align="center">
   <input id="email" type="text" placeholder="Type your e-mail...">
