--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -1,4 +1,17 @@
 <div class="row">
+  <div class="span1">
+    <script type="text/javascript"><!--
+google_ad_client = "ca-pub-7316264510359110";
+/* BoC */
+google_ad_slot = "5550860006";
+google_ad_width = 160;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript"
+src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+  </div>
   <div class="span10 offset1">
     <% @cards.each do |color,entries| %>
       <div class="span3">
