--- a/app/views/card_types/index.html.erb
+++ b/app/views/card_types/index.html.erb
@@ -1,17 +1,4 @@
 <div class="row">
-  <div class="span1">
-    <script type="text/javascript"><!--
-google_ad_client = "ca-pub-7316264510359110";
-/* BoC */
-google_ad_slot = "5550860006";
-google_ad_width = 160;
-google_ad_height = 600;
-//-->
-</script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
-  </div>
   <div class="span10 offset1">
     <% @cards.each do |color,entries| %>
       <div class="span3">
@@ -26,20 +13,6 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
         </div>
       </div>
     <% end -%>
-  </div>
-  <div class="span1">
-
-    <!-- AddThis Button BEGIN -->
-    <div class="addthis_toolbox addthis_floating_style addthis_counter_style" style="right:50px;top:50px;">
-    <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
-    <a class="addthis_button_tweet" tw:count="vertical"></a>
-    <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
-    <a class="addthis_counter"></a>
-    </div>
-    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5178062f111a57c7"></script>
-    <!-- AddThis Button END -->
-
   </div>
 </div>
 <div class="row" align="center">
@@ -83,3 +56,26 @@ src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
   })();
 
 </script>
+<!-- AddThis Button BEGIN -->
+<div class="addthis_toolbox addthis_floating_style addthis_counter_style" style="right:50px;top:50px;">
+  <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
+  <a class="addthis_button_tweet" tw:count="vertical"></a>
+  <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
+  <a class="addthis_counter"></a>
+</div>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5178062f111a57c7"></script>
+<!-- AddThis Button END -->
+<div class="addthis_floating_style" style="left:50px;top:50px;">
+  <script type="text/javascript"><!--
+    google_ad_client = "ca-pub-7316264510359110";
+    /* BoC */
+    google_ad_slot = "5550860006";
+    google_ad_width = 160;
+    google_ad_height = 600;
+    //-->
+  </script>
+  <script type="text/javascript"
+    src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+</div>
